# surrealdb.wasm

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  deno.jsonc  extract-surrealdb-version.bash  http.d.ts  http.js  http.ts  index.html  index.js  mod.d.ts  mod.js  mod.ts  package-lock.json  package.json  pnpm-lock.yaml  test.js  test.ts  tsconfig.json  webpack.config.js  ws.d.ts  ws.js  ws.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  check.yml  ci.yml  publish.yml
demo/: index.html  index.js
lib/: embedded.ts  full.d.ts  full.js  http.d.ts  http.js  surreal.ts  ws.d.ts  ws.js
lib-src/: embedded.ts
src/: lib.rs
src/app/: convert.rs  kind.rs  local.rs  log.rs  mod.rs  remote.rs  rpc.rs  types.rs
src/app/opt/: auth.rs  endpoint.rs  mod.rs  patch.rs  resource.rs  to_value.rs  yuse.rs
src/err/: mod.rs
src/mac/: mod.rs
