[package]
name = "surrealdb"
publish = false
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly driver for SurrealDB"
repository = "https://github.com/surrealdb/surrealdb.wasm"
license = "Apache License 2.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[lib]
name = "surrealdb"
crate-type = ["cdylib"]

[features]
default = ["protocol-ws", "rustls"]
protocol-ws = ["surrealdb/protocol-ws"]
protocol-http = ["surrealdb/protocol-http"]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-mem = ["surrealdb/kv-mem"]
http = ["surrealdb/http"]
rustls = ["surrealdb/rustls"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde", "wasmbind"] }
dmp = "0.2.0"
fern = "0.6.2"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", default-features = false }
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
