[package]
name = "surrealdb"
publish = false
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly driver for SurrealDB"
repository = "https://github.com/surrealdb/surrealdb.wasm"
license = "Apache License 2.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[lib]
name = "surrealdb"
crate-type = ["cdylib", "rlib"]

[features]
default = ["protocol-ws", "rustls"]
protocol-ws = ["surrealdb/protocol-ws"]
protocol-http = ["surrealdb/protocol-http"]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-mem = ["surrealdb/kv-mem"]
http = ["surrealdb/http"]
rustls = ["surrealdb/rustls"]
stack-traces = ["dep:console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde", "wasmbind"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
dmp = "0.2.0"
fern = "0.6.2"
futures = "0.3.30"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
surrealdb = { version = "1.3.0", default-features = false }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.68", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
