[package]
name = "surrealdb-wasm"
publish = false
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly driver for SurrealDB"
repository = "https://github.com/surrealdb/surrealdb.wasm"
license = "Apache License 2.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[lib]
name = "surrealdb"
crate-type = ["cdylib", "rlib"]

[features]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-mem = ["surrealdb/kv-mem"]
stack-traces = ["dep:console_error_panic_hook"]

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb", rev = "6af8ea9", default-features = false, features = [ "http" ] }
chrono = { version = "0.4.37", features = ["serde", "wasmbind"] }
ciborium = "0.2.2"
console_error_panic_hook = { version = "0.1.7", optional = true }
dmp = "0.2.0"
fern = "0.6.2"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
uuid = "1.8.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.69", features = ["console"] }
once_cell = "1.19.0"
cargo-lock = "9.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
